# agentic_rag_system

./: .env.example  .gitignore  Dockerfile  README.md  check_models.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  errors.py  llm.py  logging_config.py
app/agents/: __init__.py  graph.py  nodes.py  state.py
app/api/: __init__.py  main.py  schemas.py
app/chains/: __init__.py  generator.py  grader.py  hallucination_checker.py  rewriter.py  router.py
app/retrieval/: __init__.py  vectorstore.py
evaluation/: eval_dataset.json
frontend/: app.js  index.html  styles.css
tests/: conftest.py
tests/e2e/: test_api.py  test_full_flow.py
tests/evaluation/: test_rag_metrics.py
tests/integration/: test_graph_flow.py  test_rewrite_loop.py
tests/unit/: test_generator.py  test_grader.py  test_hallucination_checker.py  test_rewriter.py  test_router.py
